--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-simple-mocha": "^0.4.0",
+    "grunt-browserify": "^5.3.0",
     "mocha": "^2.2.4",
     "shoulda": "0.0.1"
   },
