--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-simple-mocha": "^0.4.0",
     "grunt-browserify": "^5.3.0",
+    "net-browserify": "^0.2.4",
     "mocha": "^2.2.4",
     "shoulda": "0.0.1"
   },
